applications/oidc-debugger/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-debugger-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: oidc-debugger
