applications/oidc-debugger/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-debugger-route
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: kgateway-system
  hostnames:
    - "debugger.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oidc-debugger-svc
          port: 8080
